# server-sentx

./: .dockerignore  .gitignore  Dockerfile  README.md  change_share.txt  docker-compose.db.yml  docker-compose.local.yml  docker-compose.yml  env.example  pyproject.toml
apps/ChatSessions/: admin.py  apps.py  models.py
apps/admin/: apps.py  urls.py  views.py
apps/anonymousUsageLimits/: admin.py  apps.py  models.py  serializers.py  service.py
apps/attachedFiles/: admin.py  apps.py  models.py  serializers.py  service.py
apps/chat/: admin.py  apps.py  models.py  persistent_views.py  renderers.py  serializers.py  services.py  tests.py  urls.py  views.py  viewset_serializers.py  viewsets.py
apps/chat/management/commands/: cleanup_shared_chats.py  populate_branching.py
apps/feedbacks/: admin.py  models.py  serializers.py  service.py
apps/messages/: admin.py  models.py
apps/payments/: admin.py  models.py  serializers.py  service.py  urls.py  views.py
apps/usageLimits/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
apps/users/: apple_utils.py  backends.py  models.py  pipeline.py  serializers.py  urls.py  views.py
docs/: message-branching.md
documentation/: swagger-branching.yaml  swagger.yaml
letsencrypt/: acme.json
nginx/: nginx.local.conf
scripts/: migrate.sh  start.sh
server/: settings.py  urls.py
server/static/: .prettierrc  PageRender.md  api.md  index.html  mockData.js
server/static/admin/js/: custom_admin.js
server/templates/: .gitkeep
server/templates/admin/: index.html
service/llm/: __init__.py  async_loop.py  client.py  interface.py  sentx_provider.py
service/obfuscation/: __init__.py  abfuscator.py  fields.py  mixins.py
